--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <p class="date">aug<span>28</span>2018</p>
+          <p class="date">Jun<span>23</span>2018</p>
           <h2><span>License</span></h2>
           <p class="subh2">This is a free  website. You can find interesting things in it.</a></p>
           <p>Posted by <a href="contact.html">Owner</a> &nbsp;|&nbsp; Filed under <a href="contact.html">Feng</a>, <a href="https://baike.baidu.com/item/PhD/2081627?fr=aladdin">P.H.D</a> <a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html" class="com">Tsinghua</a></p>
@@ -44,13 +44,12 @@
           <p class="spec"><a href="#" class="rm">Read more &raquo;</a></p>
         </div>
         <div class="article">
-          <p class="date">aug<span>27</span>2018</p>
-          <h2><span>Lorem Ipsum</span> Dolor Sit</h2>
-          <p class="subh2">Donec Curabitur lacinia interdum molestie. Nunc lacinia viverra ante non facilisis. Pellentesque volutpat nisl at turpis ultricies elementum non eget libero. In laoreet tortor eget elit vulputate.</p>
+          <p class="date">Jun<span>23</span>2018</p>
+          <h2><span>Tsinghua</span> University</h2>
+          <p class="subh2">清华大学秉持“自强不息、厚德载物”的校训和“行胜于言”的校风，坚持“中西融汇、古今贯通、文理渗透”的办学风格和“又红又专、全面发展”的培养特色，弘扬“爱国奉献、追求卓越”传统和“人文日新”精神。恰如清华园工字厅内对联所书——“槛外山光，历春夏秋冬、万千变幻，都非凡境；窗中云影，任东西南北、去来澹荡，洵是仙居”。</p>
           <p>Posted by <a href="contact.html">Owner</a> &nbsp;|&nbsp; Filed under <a href="contact.html">Feng</a>, <a href="https://baike.baidu.com/item/PhD/2081627?fr=aladdin">P.H.D</a> <a href="http://www.tsinghua.edu.cn/publish/thu2018/index.html" class="com">Tsinghua</a></p>
-          <img src="images/img2.jpg" width="605" height="197" alt="image" />
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam.</p>
-          <p class="spec"><a href="#" class="rm">Read more &raquo;</a></p>
+          <img src="images/timg5.jpg" width="605" height="197" alt="image" />
+          <p>1909年7月，清政府设立游美学务处，附设游美肄业馆。1911年4月，游美肄业馆改名清华学堂。1911年4月29日，清华学堂在清华园开学。</p>
         </div>
         <!--<p class="pages"><small>Page 1 of 2 &nbsp;&nbsp;&nbsp;</small> <span>1</span> <a href="#">2</a> <a href="#">&raquo;</a></p>-->
       </div>
