--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About</span> About Quantopian</h2><div class="clr"></div>
+          <h2><span>About</span> Quantopian</h2><div class="clr"></div>
           <p>Quantopian is a crowd-sourced quantitative investment firm. We inspire talented people from around the world to write investment algorithms. </p>
           <p>Quantopian provides capital, education, data, a research environment, and a development platform to algorithm authors (quants). We offer license agreements for algorithms that fit our investment strategy, and the licensing authors are paid based on their strategy's individual performance. We provide everything a quant needs to create a strategy and profit from it. </p>
           <p><strong>Quantopian websites</strong></p>
