--- a/support.html
+++ b/support.html
@@ -38,6 +38,7 @@
         <div class="article">
           <h2><span>About</span> Deep learning</h2><div class="clr"></div>
           <p>Deep learning architectures such as deep neural networks <strong> deep belief networks and recurrent neural networks</strong> have been applied to fields including computer vision, speech recognition, natural language processing, audio recognition, social network filtering, machine translation, bioinformatics, drug design and board game programs</p>
+          <img src="images/timg7.jpg" width="605" height="380" alt="image" />
           <p><strong>Image recognition</strong></p>
           <p>Some useful websites</p>
           <ul class="sb_menu">
